--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -33,3 +33,21 @@
     background-color: #D3DA80;
     color: white;
 }
+
+.button-brown {
+    background-color: #865C3A;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0; 
+    margin: 10px 10px;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px lightgray;
+    transition: ease background-color 250ms;
+}
+
+.button-brown:hover {
+    background-color: #B69478;
+    color: white;
+}
