--- a/src/static/css/FormRewardInventory.css
+++ b/src/static/css/FormRewardInventory.css
@@ -26,10 +26,27 @@ table {
     border-collapse: collapse;
     width: 500px;
     height: 200px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 th, td {
     text-align: center;
-    padding: 10px;
+    padding: 1-px;
+}
+
+#modal-confirmation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 60%;
+    max-width: 400px;
+    max-height: 200px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
