handle disabled edit delete button

--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -33,3 +33,13 @@
     background-color: #D3DA80;
     color: white;
 }
+
+.button-pink:disabled {
+    background-color: #c19dac; 
+    cursor: not-allowed; 
+}
+
+.button-green:disabled {
+    background-color: #b5b98a; 
+    cursor: not-allowed; 
+}
