--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -33,3 +33,39 @@
     background-color: #D3DA80;
     color: white;
 }
+
+.button-brown {
+    background-color: #865C3A;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0; 
+    margin: 10px 10px;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px lightgray;
+    transition: ease background-color 250ms;
+}
+
+.button-brownn:hover {
+    background-color: #A27D60;
+    color: white;
+}
+
+.button-red {
+    background-color: #BA1A1A;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0; 
+    margin: 10px 10px;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px lightgray;
+    transition: ease background-color 250ms;
+}
+
+.button-red:hover {
+    background-color: #FFEDEA;
+    color: white;
+}
