fix pages and functionality

--- a/src/static/css/Login.css
+++ b/src/static/css/Login.css
@@ -1,22 +1,62 @@
-.Login {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 15px;
+.card{
+    width: 400px;
+    padding: 50px 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    border-radius: 16px;
+    background: #FFF;
+    box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.10);
 }
 
-.input-form {
-    padding-left: 200px;
-    padding-right: 200px;
+.object-cover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
 }
 
-.font-reynaldo {
-    font-family: 'Reynaldo', serif;
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
 }
 
-#page-title {
-    font-size: xx-large;
+.form-input {
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
 }
 
-.input-label {
-    font-size: large;
+.form-input-group {
+    position: relative;
+}
+
+.show-password-btn {
+    position: absolute;
+    top: 50%;
+    right: 0.5rem;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    padding: 0.25rem;
+    cursor: pointer;
+}
+
+.submit-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 0.25rem;
+    padding: 0.5rem 1rem;
+    width: 100%;
+    cursor: pointer;
+}
+
+.submit-button:hover {
+    background-color: #0056b3;
 }
