--- a/src/static/css/RewardInventory.css
+++ b/src/static/css/RewardInventory.css
@@ -58,6 +58,45 @@
     width: 100%;
 }
 
+.detail-inventory{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 650px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    /* gap: 10px; */
+}
+
+.inventory-text {
+    font-size: 16px;
+    color: #A9B245;
+    font-weight: bold;
+    letter-spacing: 0.8px;
+    text-align: center;
+    margin-top: 0; /* Reset margin-top */
+    margin: 0;
+}
+
+.inventory-text-title {
+    font-size: 16px;
+    color: #2F3033;
+    font-weight: bold;
+    letter-spacing: 0.8px;
+    text-align: left;
+    margin-top: 0; /* Reset margin-top */
+    margin: 0;
+    /* width: 120px; */
+}
+
+.each-inventory{
+    /* align-items: flex-start; */
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+}
+
 .subtitle {
     font-size: 18px;
     color: #E685AE;
@@ -115,6 +154,7 @@ th {
     color: white;
 }
 
+
 #modal-confirmation {
     position: fixed;
     top: 0;
@@ -133,6 +173,7 @@ th {
     align-items: center;
     z-index: 9999;
 }
+
 
 #page-title {
     font-size: xx-large;
