revised: tenant register button & input form

--- a/src/static/css/TenantRegistrationForm.css
+++ b/src/static/css/TenantRegistrationForm.css
@@ -4,9 +4,23 @@
     margin-bottom: 15px;
 }
 
-.input-form {
-    padding-left: 200px;
-    padding-right: 200px;
+.input-form-tenant {
+    padding-left: 10px;
+    margin-top: 15px;
+    width: 450px;
+    align-content: center;
+}
+
+.columns-input {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.columns-2 {
+    display: flex;
+    width: 75%;
+    flex-wrap: wrap;
 }
 
 .font-reynaldo {
