--- a/src/static/css/sponsor/CreateSponsor.css
+++ b/src/static/css/sponsor/CreateSponsor.css
@@ -23,12 +23,12 @@
 
 #modal-confirmation {
     position: fixed;
-    top: 0;
-    left: 0;
-    /* transform: translate(-50%, -50%); */
+    top: 10%; /* Menempatkan modal tepat di tengah secara vertikal */
+    left: 50%; /* Menempatkan modal tepat di tengah secara horizontal */
+    transform: translate(180%, 60%); /* Menggeser modal agar posisinya tepat di tengah halaman */
     width: 80%;
-    height: 60%;
     max-width: 400px;
+    height: 60%;
     max-height: 200px;
     background-color: white;
     padding: 20px;
@@ -37,7 +37,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 10000; /* Mengatur z-index agar modal berada di atas elemen lain */
 }
 
 .title {
