--- a/src/static/css/sponsor/DetailSponsor.css
+++ b/src/static/css/sponsor/DetailSponsor.css
@@ -47,7 +47,7 @@
     text-align: left;
     margin-top: 0; /* Reset margin-top */
     margin: 0;
-    width: 120px;
+    width: 200px;
 }
 
 .each-sponsor{
@@ -97,12 +97,12 @@ th {
 
 #modal-confirmation {
     position: fixed;
-    top: 0;
-    left: 0;
-    /* transform: translate(-50%, -50%); */
+    top: 10%; /* Menempatkan modal tepat di tengah secara vertikal */
+    left: 50%; /* Menempatkan modal tepat di tengah secara horizontal */
+    transform: translate(180%, 60%); /* Menggeser modal agar posisinya tepat di tengah halaman */
     width: 80%;
-    height: 60%;
     max-width: 400px;
+    height: 60%;
     max-height: 200px;
     background-color: white;
     padding: 20px;
@@ -111,9 +111,6 @@ th {
     text-align: center;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 10000; /* Mengatur z-index agar modal berada di atas elemen lain */
 }
 
-#page-title {
-    font-size: xx-large;
-}
