--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -29,7 +29,20 @@
     transition: ease background-color 250ms;
 }
 
-.button-green:hover {
+.button-green-invoice {
+    background-color: #A9B245;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0; 
+    /* margin: 5px 5px; */
+    cursor: pointer;
+    box-shadow: 0px 2px 2px lightgray;
+    transition: ease background-color 250ms;
+}
+
+.button-green-invoice:hover {
     background-color: #D3DA80;
     color: white;
 }
