--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -82,3 +82,21 @@
     background-color: #a04646; 
     cursor: not-allowed; 
 }
+
+.button-grey {
+    background-color: #909094;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0; 
+    margin: 10px 10px;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px lightgray;
+    transition: ease background-color 250ms;
+}
+
+.button-grey:hover {
+    background-color: #F1F0F4;
+    color: white;
+}
