edit navbar & fix tenant details

--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -29,6 +29,11 @@
     transition: ease background-color 250ms;
 }
 
+.button-green:hover {
+    background-color: #D3DA80;
+    color: white;
+}
+
 .button-green-invoice {
     background-color: #A9B245;
     color: white;
