--- a/src/static/css/FormRewardInventory.css
+++ b/src/static/css/FormRewardInventory.css
@@ -36,6 +36,7 @@ th, td {
     position: fixed;
     top: 0;
     left: 0;
+    transform: translate(135%, 80%);
     width: 80%;
     height: 60%;
     max-width: 400px;
