--- a/src/static/css/invoice/DetailInvoice.css
+++ b/src/static/css/invoice/DetailInvoice.css
@@ -1,4 +1,4 @@
-.RewardInventory {
+.DetailInvoice {
     width: 100%;
     height: 50vh;
     display: flex;
@@ -140,22 +140,24 @@ th {
 
 #modal-confirmation {
     position: fixed;
-    top: 0;
-    left: 0;
-    transform: translate(135%, 80%);
-    width: 80%;
-    height: 60%;
+    top: 10%; /* Menempatkan modal 10% dari atas layar */
+    left: 50%; /* Menempatkan modal tepat di tengah secara horizontal */
+    transform: translate(135%, 80%); /* Menggeser modal agar posisinya tepat di tengah vertikal dan 80% dari bawah layar */
+    width: 30%;
     max-width: 400px;
+    height: 60%;
     max-height: 200px;
     background-color: white;
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
+    z-index: 10000;
 }
+
+
+
+
 
 
 #page-title {
