--- a/src/static/css/Dashboard.css
+++ b/src/static/css/Dashboard.css
@@ -7,3 +7,13 @@
     margin-right: 120px;
     margin-top: 10px;
 }
+
+.base-Popper-root {
+    width: 200px;
+}
+
+.MuiChartsTooltip-table {
+    width: 150px;
+    height: 50px;
+    margin-top: 0px;
+}
