--- a/src/static/css/Dashboard.css
+++ b/src/static/css/Dashboard.css
@@ -3,7 +3,24 @@
 }
 
 .event-card {
-    margin-left: 120px;
-    margin-right: 120px;
+    /* margin-left: 120px;
+    margin-right: 120px; */
+    margin: 0 120px;
     margin-top: 10px;
+}
+
+.total-card {
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-top: 10px;
+    margin: 0 120px;
+    /* max-width: 900px;  */
+}
+
+.square-card {
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-top: 10px;
+    /* margin: 0 120px; */
+    /* max-width: 900px;  */
 }
