--- a/src/static/css/Dashboard.css
+++ b/src/static/css/Dashboard.css
@@ -17,10 +17,36 @@
     /* max-width: 900px;  */
 }
 
+
 .square-card {
     /* margin-left: auto;
     margin-right: auto; */
     margin-top: 10px;
     /* margin: 0 120px; */
     /* max-width: 900px;  */
+}
+
+.detail-square-card {
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-top: 10px;
+    margin-bottom: 2px;
+    /* margin: 0 120px; */
+    /* max-width: 900px;  */
+}
+
+
+.previous-event-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
+.previousevent-card {
+    width: calc(25% - 20px); /* 25% width for 4 cards per row with some space between them */
+    /* Other styles */
+    margin-right: 20px;
 }
