--- a/src/static/css/Dashboard.css
+++ b/src/static/css/Dashboard.css
@@ -31,6 +31,11 @@
     margin-right: 120px;
 }
 
+.ongoing-event-container {
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
 .previousevent-card {
     width: calc(25% - 20px);
     margin-right: 20px;
