--- a/src/static/css/Style.css
+++ b/src/static/css/Style.css
@@ -100,11 +100,13 @@ body {
 	border-radius: 48px 0 0 48px;
 	padding: 4px;
 }
-#sidebar .side-menu li.active {
+
+/* Toggled Sidebar Radius: remove the ".hide" */
+#sidebar.hide .side-menu li.active {
 	background: var(--grey);
 	position: relative;
 }
-#sidebar .side-menu li.active::before {
+#sidebar.hide .side-menu li.active::before {
 	content: '';
 	position: absolute;
 	width: 40px;
@@ -115,7 +117,7 @@ body {
 	box-shadow: 20px 20px 0 var(--grey);
 	z-index: -1;
 }
-#sidebar .side-menu li.active::after {
+#sidebar.hide .side-menu li.active::after {
 	content: '';
 	position: absolute;
 	width: 40px;
@@ -126,6 +128,7 @@ body {
 	box-shadow: 20px -20px 0 var(--grey);
 	z-index: -1;
 }
+
 #sidebar .side-menu li a {
 	width: 100%;
 	height: 100%;
