--- a/src/static/css/Contact.css
+++ b/src/static/css/Contact.css
@@ -1,4 +1,4 @@
-.UserList {
+.Contact {
     width: 100%;
     height: 50vh;
     display: flex;
@@ -6,9 +6,9 @@
     justify-content: center; 
     align-items: center;
     margin-top: 100px;
-}
-
-.title {
+  }
+  
+  .title {
     color: var(--Neutral-10, #FFF);
     /* Desktop/Heading 4 */
     /* font-family: Reynaldo; */
@@ -18,46 +18,9 @@
     /* line-height: 100%; */
     letter-spacing: 1px;
     margin-bottom: 4px; /* Adjust as needed */
-}
-
-.detail-user{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 900px;
-    margin: 0 auto; /* Center the container horizontally */
-    gap: 20px;
-}
-
-.reward-text {
-    font-size: 16px;
-    color: #A9B245;
-    font-weight: bold;
-    letter-spacing: 0.8px;
-    text-align: left;
-    margin-top: 0; /* Reset margin-top */
-    margin: 0;
-}
-
-.reward-text-title {
-    font-size: 16px;
-    color: #2F3033;
-    font-weight: bold;
-    letter-spacing: 0.8px;
-    text-align: left;
-    margin-top: 0; /* Reset margin-top */
-    margin: 0;
-}
-
-.each-user{
-    /* align-items: flex-start; */
-    display: flex;
-    align-items: center;
-    gap: 44px;
-    width: 100%;
-}
-
-.subtitle {
+  }
+  
+  .subtitle {
     font-size: 18px;
     color: #E685AE;
     font-weight: bold;
@@ -69,14 +32,14 @@
     margin-bottom: 30px
     /* margin-top: 0; Reset margin-top */
     /* margin: 0 5px; */
-}
-
-.subtitle-wrapper {
+  }
+  
+  .subtitle-wrapper {
     display: flex;
     align-items: center;
-}
-
-.text-wrapper {
+  }
+  
+  .text-wrapper {
     margin-top: 10px;
     top: 0;
     right: 0;
@@ -87,41 +50,41 @@
     display: inline-flex;
     flex-direction: column;
     gap: 4px;
-}
-
-#page-title {
+  }
+  
+  #page-title {
     font-size: xx-large;
-}
-
-.button-field {
+  }
+  
+  .button-field {
     margin-bottom: 20px;
-}
-table {
+  }
+  table {
     border-collapse: collapse;
     width: 1200px;
     height: 200px;
-}
-
-th, td {
+  }
+  
+  th, td {
     text-align: center;
     padding: 10px;
-}
-
-tr:nth-child(even){background-color: #f2f2f2}
-
-th {
+  }
+  
+  tr:nth-child(even){background-color: #f2f2f2}
+  
+  th {
     background-color: #F59FC3; ;
     color: white;
-}
-
-#modal-confirmation {
+  }
+  
+  #modal-confirmation {
     position: fixed;
-    top: 0;
-    left: 0;
-    /* transform: translate(-50%, -50%); */
+    top: 10%; /* Menempatkan modal tepat di tengah secara vertikal */
+    left: 50%; /* Menempatkan modal tepat di tengah secara horizontal */
+    transform: translate(180%, 60%); /* Menggeser modal agar posisinya tepat di tengah halaman */
     width: 80%;
-    height: 60%;
     max-width: 400px;
+    height: 60%;
     max-height: 200px;
     background-color: white;
     padding: 20px;
@@ -130,47 +93,48 @@ th {
     text-align: center;
     justify-content: center;
     align-items: center;
-}
-
-.user-table {
+    z-index: 10000; /* Mengatur z-index agar modal berada di atas elemen lain */
+  }
+  
+  .contact-table {
     border-collapse: collapse;
     width: 100%;
     border-radius: 15px; 
     overflow: hidden;
   }
   
-  .user-table th, .user-table td {
+  .contact-table th, .contact-table td {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 10px;
   }
   
-  .user-table th {
-    text-align: left;
+  .contact-table th {
+    text-align: center;
   }
   
-  .user-table th:first-child, .user-table td:first-child {
-    width: 10%; /* Set the width for the first column */
+  .contact-table th:first-child, .contact-table td:first-child {
+    width: 18%; /* Set the width for the first column */
   }
   
   /* Set the width for other columns */
-  .user-table th:nth-child(2), .user-table td:nth-child(2) {
+  .contact-table th:nth-child(2), .contact-table td:nth-child(2) {
+    width: 18%;
+  }
+  
+  .contact-table th:nth-child(3), .contact-table td:nth-child(3) {
     width: 20%;
   }
   
-  .user-table th:nth-child(3), .user-table td:nth-child(3) {
+  .contact-table th:nth-child(4), .contact-table td:nth-child(4) {
     width: 20%;
   }
   
-  .user-table th:nth-child(4), .user-table td:nth-child(4) {
-    width: 15%;
+  .contact-table th:nth-child(5), .contact-table td:nth-child(5) {
+    width: 12%;
   }
   
-  .user-table th:nth-child(5), .user-table td:nth-child(5) {
+  .contact-table th:nth-child(6), .contact-table td:nth-child(6) {
     width: 20%;
-  }
-  
-  .user-table th:nth-child(6), .user-table td:nth-child(6) {
-    width: 15%;
   }
   
   
