--- a/src/static/css/Style.css
+++ b/src/static/css/Style.css
@@ -171,11 +171,18 @@ body {
 	width: calc(100% - 280px);
 	left: 250px;
 	transition: .3s ease;
+	border: none;
 }
 #sidebar.hide ~ #content {
 	width: calc(100% - 60px);
 	left: 60px;
 }
+
+#header {
+	position: relative;
+}
+
+
 
 
 
@@ -369,7 +376,7 @@ body {
 }
 #content main .box-info li {
 	padding: 24px;
-	background: var(--green);
+	background: var(--light);
 	border-radius: 20px;
 	display: flex;
 	align-items: center;
@@ -419,7 +426,7 @@ body {
 }
 #content main .table-data > div {
 	border-radius: 20px;
-	background: var(--pinky);
+	background: var(--light);
 	padding: 24px;
 	overflow-x: auto;
 }
