--- a/src/static/css/sponsor/DetailSponsor.css
+++ b/src/static/css/sponsor/DetailSponsor.css
@@ -59,15 +59,15 @@
 }
 
 .subtitle {
-    font-size: 18px;
+    font-size: 16px;
     color: #E685AE;
-    font-weight: bold;
+    /*font-weight: bold;*/
     letter-spacing: 1px;
     position: absolute;
     bottom: 0;
     left: 0;
-    margin-left: 210px;
-    margin-bottom: 30px
+    margin-left: 65px;
+    margin-bottom: 20px
 }
 
 #page-title {
