--- a/src/static/css/Style.css
+++ b/src/static/css/Style.css
@@ -32,6 +32,7 @@ li {
 	--green: #F4F8CB;
 	--pinky: #F7EFE9;
     --primary10: #FFF1F8;
+    --redaccent: #e35b5b;
 }
 
 html {
@@ -150,6 +151,9 @@ body {
 }
 #sidebar .side-menu li a.logout {
 	color: var(--red);
+}
+#sidebar .side-menu li a.logout:hover {
+	color: var(--redaccent);
 }
 #sidebar .side-menu.top li a:hover {
 	color: var(--primary10);
