--- a/src/static/css/Button.css
+++ b/src/static/css/Button.css
@@ -16,6 +16,24 @@
     color: white;
 }
 
+.button-orange {
+    background-color: #EEA604;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    outline: 0;
+    border: 0; 
+    margin: 10px 10px;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px lightgray;
+    transition: ease background-color 250ms;
+}
+
+.button-orange:hover {
+    background-color: #FFF7E4;
+    color: white;
+}
+
 .button-green {
     background-color: #A9B245;
     color: white;
