--- a/src/static/css/Login.css
+++ b/src/static/css/Login.css
@@ -10,6 +10,18 @@
     box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.10);
 }
 
+.card-form{
+    width: 1000px;
+    padding: 50px 24px;
+    display: flex;
+    flex-direction: column;
+    /* align-items:start; */
+    gap: 24px;
+    border-radius: 16px;
+    background: #FFF;
+    /* box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.10); */
+}
+
 .object-cover-login {
     display: flex;
     justify-content: center;
