--- a/src/static/css/invoice/DetailInvoice.css
+++ b/src/static/css/invoice/DetailInvoice.css
@@ -1,11 +1,18 @@
 .DetailInvoice {
-    width: 100%;
+    /* width: 100%;
     height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center;
-    margin-top: 100px;
+    margin-top: 100px; */
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    margin-top: 50px;
 }
 
 .title {
@@ -21,11 +28,25 @@
 }
 
 .detail-invoice{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     width: 780px;
-    margin: 0 auto; /* Center the container horizontally */
+    margin: 0 auto;
+    gap: 20px; */
+
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    gap: 20px; */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    margin: 50px auto; /* Menggunakan margin atas dan bawah auto untuk membuatnya berada di tengah */
     gap: 20px;
 }
 
@@ -59,13 +80,18 @@
 }
 
 .detail-inventory{
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     align-items: center;
     width: 650px;
     margin: 0 auto;
+    margin-bottom: 10px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
     margin-bottom: 10px;
-    /* gap: 10px; */
 }
 
 .inventory-text {
@@ -119,11 +145,11 @@
     margin-bottom: 20px;
 }
 
-.table {
+/* .table {
     border-collapse: collapse;
     width: 1200px;
     height: 200px;
-}
+} */
 
 th, td {
     text-align: center;
