--- a/src/static/css/Contact.css
+++ b/src/static/css/Contact.css
@@ -136,5 +136,20 @@
   .contact-table th:nth-child(6), .contact-table td:nth-child(6) {
     width: 20%;
   }
+
+  .search-and-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .button-container {
+    margin-right: 10px; 
+  }
+  
+  .search-container {
+    position: relative;
+    display: inline-block;
+  }
   
   
