--- a/src/static/css/event/Event.css
+++ b/src/static/css/event/Event.css
@@ -138,3 +138,18 @@ th {
   width: 20%;
 }
 
+.search-and-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container {
+  margin-right: 10px; 
+}
+
+.search-container {
+  position: relative;
+  display: inline-block;
+}
+
