minor fix: margin for content-container

--- a/src/static/css/UserList.css
+++ b/src/static/css/UserList.css
@@ -65,7 +65,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    margin-left: 210px;
+    /* margin-left: 210px; */
     margin-bottom: 30px
     /* margin-top: 0; Reset margin-top */
     /* margin: 0 5px; */
