--- a/src/static/css/Dashboard.css
+++ b/src/static/css/Dashboard.css
@@ -31,6 +31,33 @@
     margin-right: 120px;
 }
 
+.going-event-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
+.detailevent-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
+.detailevent1-card {
+    
+    width: calc(60% - 20px);
+    margin-right: 20px;
+}
+
+.detailevent2-card {
+    width: calc(60% - 20px);
+    margin-right: 20px;
+}
+
 .ongoing-event-container {
     margin-left: 120px;
     margin-right: 120px;
@@ -39,6 +66,12 @@
 .previousevent-card {
     width: calc(25% - 20px);
     margin-right: 20px;
+}
+
+.goingevent-card {
+    width: calc(50% - 20px);
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .base-Popper-root {
